Updated the owl-demo item css to have the correct height
So now the screenshots won't look squashed.

ht to @cfgt

--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ header {
 #owl-demo .item img {
     display: block;
     width: 280px;
-    height: 497px;
+    height: 567px;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
     border-radius: 5px;
